--- a/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
@@ -1,8 +1,8 @@
 ﻿@using QA.Models
 @using QA.Misc
-@model Kategorija
+@model OdgovorAzuriranje
 @{
-    ViewBag.Title = "Dodaj kategoriju";
+    ViewBag.Title = "Ažuriraj pitanje";
     Layout = null;
 }
 
@@ -25,14 +25,15 @@
     <section class="body">
         <section class="form-section">
             <h1>@ViewBag.Title</h1>
-            @using (Html.BeginForm("DodajKategoriju", "App", FormMethod.Post, new { @class = "login-form" }))
+            @using (Html.BeginForm("AzurirajOdgovor", "App", FormMethod.Post, new { @class = "login-form" }))
             {
                 @Html.AntiForgeryToken()
-                @Html.ValidationMessageFor(m => m.kategorija, "", new { @style = "color:red;" })
-                @Html.LabelFor(m => m.kategorija)
-                @Html.EditorFor(m => m.kategorija, new { htmlAttributes = new { @placeholder = "Kategorija..." } })
-                <button name="dodajKat" type="submit">
-                    Dodaj
+                @Html.ValidationMessageFor(m => m.Odgovor, "", new { @style = "color:red;" })
+                @Html.LabelFor(model => model.Odgovor)<br />
+                @Html.TextAreaFor(model => model.Odgovor, new { htmlAttributes = new { @placeholder = "Upišite odgovor..." } })
+                @Html.HiddenFor(model => model.Id, new { Value = ViewBag.Id })
+                <button name="azurirajOdg" type="submit">
+                    Ažuriraj
                 </button>
             }
         </section>
