--- a/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
@@ -30,7 +30,7 @@
                     <div class="question-text">
                         @if (!String.IsNullOrEmpty(kor.korisnicko_ime))
                         {
-                            @Html.ActionLink(kor.korisnicko_ime, "DetaljiKorisnik", new { id = kor.id }, new { @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = kor.id }) })
+                            @Html.ActionLink(kor.korisnicko_ime, "DetaljiKorisnik", new { id = kor.id }, new { @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = kor.id, ReturnUrl = ViewBag.ReturnUrl }) })
 
                         }
                     </div>
@@ -39,25 +39,7 @@
             }
         </div>
     </div>
-    <div class="modal" id="modalView" tabindex="-1" role="dialog" aria-labelledby="modalView" aria-hidden="true" data-backdrop="static">
-        <div id="viewContainer">
-
-        </div>
-    </div>
 </body>
 </html>
 @Styles.Render("/Content/style.css")
-@section Scripts {
-    <script type="text/javascript">
-    $('#question-text').on("click", "#korisnikDetalji", function (event) {
-    event.preventDefault();
 
-    var url = $(this).attr("data-url");
-    $.get(url, function (data) {
-    $('#viewContainer').html(data);
-    $('#modalView').modal('show');
-    });
-    });
-
-    </script>
-}
