--- a/PAUP_QA-master/QA/Views/Shared/_Layout.cshtml
+++ b/PAUP_QA-master/QA/Views/Shared/_Layout.cshtml
@@ -40,8 +40,9 @@
     @RenderBody()
     @Styles.Render("/Content/style.css")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
-    @*@Styles.Render("~/Content/css")*@
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
